1) Enabled to list and show articles. 2) Used redcarpet to process markdown files.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
   <% @articles.each do |article| %>
     <li>
       <%= article.title %>
+      <%= link_to 'Read', "#{articles_path}/#{article.path}" %>
     </li>
   <% end %>
 </ul>
